# airflow-spielwiese

./: Makefile.python.tmpl  genconn.py  pyproject.toml  snex.conf.yaml
airflow/: airflow.cfg
dags/: customer_ingestion.py
dags_test/: test_load.py
jobs/: start.py
src/data_ingest/: ingestion1.py
